# omnes-flores

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pypi-workflow.yaml
docs/: _config.yml  index.md
model-cards/: omnes-flores-40-lang-41-treebank-v0.md  omnes-flores-40-lang-42-treebank-v0.md  omnes-flores-84-lang-99-treebank-non-commercial-v0.md
omnes_flores/: __init__.py  _test.py  cli.py  completion_vllm.py  dialog_template.py  inference_base.py  inference_vllm.py  message.py  parse_output.py  utils.py
omnes_flores/resources/: 40-lang-41-treebank.toml  vllm_logging_config.json
